# mcp_video_resizing

./: .gitignore  CMakeLists.txt  README.md
include/: Header.h  MainWindow.hpp  ProcessMonitor.hpp  ProcessStats.hpp  VideoCompressorTask.hpp  bounded_queue.hpp  encoder.hpp  opencl_driver.hpp  video_reader.hpp
kernels/: opencl_preprocess.cl
src/: encoder.cpp  main.cpp  opencl_driver.cpp  video_reader.cpp
src/gui/: .gitignore  MainWindow.cpp  MainWindow.hpp  Makefile:Zone.Identifier  ProcessMonitor.cpp  ProcessMonitor.hpp  README.md  TimerEventFilter.cpp  TimerEventFilter.hpp  VideoCompressorTask.cpp  gui_app  gui_app.pro:Zone.Identifier  main.cpp
tests/: CMakeLists.txt  test.cpp
